# samediffed

./: .gitignore  README.md  example.py  pyproject.toml
data/: librispeech-samediff-words-dev-clean.item  librispeech-samediff-words-dev-other.item  librispeech-samediff-words-test-clean.item  librispeech-samediff-words-test-other.item
rusted/: Cargo.toml  lib.rs
samediffed/: __init__.py  samediff.py  utils.py
